--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<title> Harry Ashenden's Portfolio </title>
+		<title> Harry Ashenden Portfolio </title>
 		
 		</head>
-		<link rel="stylesheet" type="text/css"href="mystyle.css">
-		<body style = "padding: 2.5%;">
+		<link rel="stylesheet" href="mystyle.css">
+		<body>
 			<div id="menu"></div>
-			<h1 style="text-align: center;">Portfolio</h1>
+			<h1>E-Portfolio</h1>
 			<table>
 			
 				<tr>
@@ -27,7 +27,7 @@
 			</table>
 	
 			<hr> 
-			<h2> About me </h2>
+			<h2> About Me </h2>
 			<p style="text-align: justify;">
 			I am a motivated geophysics student seeking a graduate role or a role in further education. I have teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction, event planning and general management. I am eager to continue my learning and enhance my computational skills by joining the IN4.0 Academy Project.
 			</p>
@@ -112,7 +112,7 @@
 				<h3> Geophysical Dissertation </h3>
 				<h4> The EM-34 – Ground Conductivity Mapping with a Two-coil Inductor </h4>
 				<p> For my final year university project, I launched an investigation into an electromagnetic geophysical field method called the EM-34, designed to measure ground conductivity. I investigated why the survey method was not widely accepted to an industry level by examining the EM theory and principles and how an output of ground conductivity is obtained. The thesis below consists of this investigation, as well as a number of case studies that I performed as part of my project. The case studies allowed me to analyse various concepts of an EM-34 survey and reach a valid conclusion that the EM-34 should be accepted to an industry level. </p>
-				<embed src="C:\Users\hashe\OneDrive\Documents\UNI DOCUMENTS\THIRD YEAR\IN4.0 TALENT\WEB DESIGN\HTML File\Thesis.pdf#toolbar=0&navpanes=0&scrollbar=0" "type="application/pdf" width="100%" height="300px" />
+				<embed src="C:\Users\hashe\OneDrive\Documents\UNI DOCUMENTS\THIRD YEAR\IN4.0 TALENT\WEB DESIGN\HTML File\Thesis.pdf#toolbar=0&navpanes=0&scrollbar=0" "type="application/pdf" width="100%" height="600px" />
 			<hr>
 			
 	
