--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<h3> Geophysical Dissertation </h3>
 				<h4> The EM-34 – Ground Conductivity Mapping with a Two-coil Inductor </h4>
 				<p> For my final year university project, I launched an investigation into an electromagnetic geophysical field method called the EM-34, designed to measure ground conductivity. I investigated why the survey method was not widely accepted to an industry level by examining the EM theory and principles and how an output of ground conductivity is obtained. The thesis below consists of this investigation, as well as a number of case studies that I performed as part of my project. The case studies allowed me to analyse various concepts of an EM-34 survey and reach a valid conclusion that the EM-34 should be accepted to an industry level. </p>
-				<embed src="C:\Users\hashe\OneDrive\Documents\UNI DOCUMENTS\THIRD YEAR\IN4.0 TALENT\WEB DESIGN\HTML File\Thesis.pdf#toolbar=0&navpanes=0&scrollbar=0" "type="application/pdf" width="100%" height="600px" />
+				<embed src=Thesis.pdf#toolbar=0&navpanes=0&scrollbar=0" "type="application/pdf" width="100%" height="600px" />
 			<hr>
 			
 	
