--- a/index.html
+++ b/index.html
@@ -58,10 +58,16 @@ var x = setInterval(function() {
 			<hr> 
 			<h2> About Me </h2>
 			<p style="text-align: justify;">
-			I am a motivated geophysics student seeking a graduate role or a role in further education. I have teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction, event planning and general management. I am eager to continue my learning and enhance my computational skills by joining the IN4.0 Academy Project.
+			I am a motivated geophysics graduate seeking a graduate role or a role in further education. I have teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction and general management. I am eager to continue my learning and enhance my computational skills by joining the IN4.0 Academy Project.
 			</p>
 			<hr>
 			<div class="timeline">
+				<div class="container right">
+					<div class="content">
+						<h2>2021</h2>
+						<h3> IN4.0 Talent Academy </h3>
+						<p class="Classification">Amazon Cloud Practitioner </p>
+					</div>
 				<div class="container left">
 					<div class="content">
 						<h2>2017 - 2020</h2>
