--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ var x = setInterval(function() {
 						<h3> IN4.0 Talent Academy </h3>
 						<p class="Classification">Amazon Cloud Practitioner </p>
 					</div>
+				</div>
 				<div class="container left">
 					<div class="content">
 						<h2>2017 - 2020</h2>
