--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		function startclock() {
 			
 		// Set the date we're counting down to
-var countDownDate = new Date("Mar 29, 2021 17:00:00").getTime();
+var countDownDate = new Date("Apr 02, 2021 17:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -58,7 +58,11 @@ var x = setInterval(function() {
 			<hr> 
 			<h2> About Me </h2>
 			<p style="text-align: justify;">
-			I am a motivated geophysics graduate seeking a graduate role or a role in further education. I have teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction and general management. I am eager to continue my learning and enhance my computational skills by joining the IN4.0 Academy Project.
+			I am a motivated geophysics graduate seeking a graduate geophysicist role or a cloud engineering opportunity. 
+			I have acquired teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. 
+			I am currently a Technical Intern at the IN4.0 Academy,	exposing myself to architecting secure & scalable Cloud solutions and understanding and analyzing problems with design thinking techniques.
+			My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction and general management. 
+			I am eager to continue my learning and enhance my computational skills by being a part of the IN4.0 Talent Academy.
 			</p>
 			<hr>
 			<div class="timeline">
