--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@ var x = setInterval(function() {
 			<table>
 				<tr>
 					<td>
+					<h3> AWS Cloud Computing </h3>
+					<ul>
+						<li>Experience with building blocks of Cloud computing services in networking, storage and security</li>
+						<li>Developed Web applications and RESTful APIs</li>
+						<li>Exposure to architecting secure & scalable Cloud solutions by designing cloud architectures for different use purposes </li>
+					</ul>
+					</td>
+				</tr>
+				<tr>
+					<td>
 					<h3> Geophysical Surveying </h3>
 					<ul>
 						<li>Been involved in various geophysical surveys, including the subsequent making of in-depth geophysical reports of areas in Liverpool and Tenerife, developing my report making skills.</li>
@@ -114,7 +124,7 @@ var x = setInterval(function() {
 				</tr>
 				<tr>
 					<td>
-					<h3> Technical/Computational Skills </h3>
+					<h3> Technical Skills </h3>
 					<ul>
 						<li>Developed my computational skills and techniques in my degree program such as data modelling and seismic processing in various software environments (MATLAB, UNIX, Python).</li>
 						<li>Spent two weeks on a field course reading and producing detailed geophysical results e.g. seismograms, gravity + magnetic profiles etc. in Tenerife, displaying my strong aptitude in maths and IT.</li>
