--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ var x = setInterval(function() {
 					<td>
 					<h3> AWS Cloud Computing </h3>
 					<ul>
-						<li>Experience with building blocks of Cloud computing services in networking, storage and security</li>
-						<li>Developed Web applications and RESTful APIs</li>
-						<li>Exposure to architecting secure & scalable Cloud solutions by designing cloud architectures for different use purposes </li>
+						<li>Experience with building blocks of Cloud computing services in networking, storage and security.</li>
+						<li>Developed Web applications and RESTful APIs.</li>
+						<li>Exposure to architecting secure & scalable Cloud solutions by designing cloud architectures for different use purposes. </li>
 					</ul>
 					</td>
 				</tr>
