--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ var x = setInterval(function() {
 					<h3> AWS Cloud Computing </h3>
 					<ul>
 						<li>Experience with building blocks of Cloud computing services in networking, storage and security.</li>
-						<li>Developed Web applications and RESTful APIs.</li>
+						<li>Developed Web applications and RESTful APIs, enhancing my programming skills in HTML, CSS, SQL and JavaScript.</li>
 						<li>Exposure to architecting secure & scalable Cloud solutions by designing cloud architectures for different use purposes. </li>
 					</ul>
 					</td>
