--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		function startclock() {
 			
 		// Set the date we're counting down to
-var countDownDate = new Date("Apr 07, 2021 17:00:00").getTime();
+var countDownDate = new Date("Apr 27, 2021 17:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -62,11 +62,13 @@ var x = setInterval(function() {
 			<br>
 			I have acquired teamwork experience in the form of planning and carrying out various geophysical surveys within small teams. I also have hands-on work experience with a leading geophysical firm. 
 			<br>
-			I am currently a Technical Intern at the IN4.0 Academy,	exposing myself to architecting secure & scalable Cloud solutions and understanding and analyzing problems with design thinking techniques.
+			I recently graduated as a Technical Intern from the IN4.0 Academy, exposing myself to architecting secure & scalable Cloud solutions and understanding and analyzing problems with design thinking techniques.
 			<br>
-			My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction and general management. 
+			I gained my AWS re/Start Badge and AWS Cloud Practioner Badge in April 2021 and I am currently continuing my AWS Cloud training through various AWS courses.
 			<br>
-			I am eager to continue my learning and enhance my computational skills by being a part of the IN4.0 Talent Academy.
+			My additional work experience is working as a tennis coach for 3 years at South Ribble Tennis Centre, gaining skills in social interaction and general management.
+			<br>
+			I am eager to continue my learning and enhance my computational skills by searching for more learning opportunities and STEM related graduate schemes. 
 			</p>
 			<hr>
 			<div class="timeline">
