--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@ var x = setInterval(function() {
 					<h3> Geophysical Survey Assistance (2018, 2019) </h3>
 					<p> I have assisted in geophysical surveys conducted by a Geophysical firm called RSK. In December 2018, I took part in a 1-week survey which involved the attempt to discover underground tunnels beneath St. George’s Hall. In October 2019, I took part in a 1-day survey to detect any boreholes on the promenade in Cressington, which involved the use of a GPR. Using the equipment in a working scenario gave me pivotal work experience in the environmental sector. </p>
 					</td>
+				</tr>
+				<tr>
+					<td>
+					<h3> Technical Intern (December 2020 – April 2021) </h3>
+					<p> Enrolled onto the IN4.0 Technical Academy where I am learning about a variety of AWS cloud concepts. I joined this course to get the chance to combine my academic skills with a bespoke and blended learning programme, developing myself to drive technology adoption. During my time on the academy, I have been developing my ability to code in Python, HTML, CSS, SQL and JavaScript, while also passing my AWS Cloud Practitioner exam and becoming an AWS re/Start graduate. </p>
+					</td>
 				</tr>	
 			</table>
 			<hr>
