--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		function startclock() {
 			
 		// Set the date we're counting down to
-var countDownDate = new Date("Apr 27, 2021 17:00:00").getTime();
+var countDownDate = new Date("Apr 30, 2021 17:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -192,7 +192,7 @@ var x = setInterval(function() {
 				<p id="demo"></p>
 				</div>
 				<div class="bottomleft">
-					<p>Next stop, graduation from the IN4.0 Academy...</p>
+					<p>Next stop, finding a graduate opportunity in a STEM related graduate scheme...</p>
 				</div>
 				
 				
